--- a/index.html
+++ b/index.html
@@ -1,83 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html  lang="es">
 <head>
-	<title></title>
+	<title>Maquetacion html y css</title>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-	<div id="pricipal">
-		<header>
-			<div>
-				<!-- Contenedor Logo -->
-				<div id="logo">
-					<h2>
-						Logo
-						<!--
-						<img src="img/img.png" alt="Foto de Diamante">-->
-						</h2>
-						<!-- Caja de Busqueda -->
-						<div class="LoginUser">
-                         <a href="#">REGISTER </a>
-                         <a href="">|</a>
-                         <a href="#">LOGIN</a>
-
-                         <!-- Caja de Busqueda -->
-                        <input id="Buscar" type="tex" placeholder="Buscar..">
-                    </div>
-				</div>
-			</div>
-		</header>
-	</div>
-	<main>
-		<!-- Menu Principal -->
-        <nav>
-            <a href="#">INICIO |</a>
-            <a href="#">SERVICIOS |</a>
-            <a href="#">PORTAFOLIO |</a>
-            <a href="#">CLIENTES |</a>
-            <a href="#">CONTACTOS</a>
-        </nav>
-
-        <!-- Galeria -->
-        <section id="Galeria">
-            SLIDER GALERIA
-        </section>
-
-        <!-- Noticias -->
-        <section id="Noticias">
-            <!-- Noticia Box1 -->
-           <div class="box">
-           	<a href="#">NOTICIA 1</a>
-           </div>
-
-            <!-- Noticia Box2 -->
-           <div class="box">
-           	<a href="#">NOTICIA 2</a>
-           </div>
-        </section>
-
-        <!-- Spononsors Boxs -->
-        <section id="Sponsors">
-            <div class="box">
-            	<a href="#">Sponsor1</a>
-            </div>
-            <div class="box">
-            	<a href="#">Sponsor2</a>
-            </div>
-            <div class="box">
-            	<a href="#">Sponsor3</a>
-            </div>
-            <div class="box">
-            	<a href="#">Sponsor4</a>
-            </div>
-            <div class="box">
-            	<a href="#">Sponsor5</a>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="footer"> PIE DE PAGINA </div>
-    </footer>
-
+	<header class="cabeceraP">
+		
+		<h1>LOGOTIPO</h1>
+	
+	<section class="cabecera">
+		<nav class="menuS">
+			LOGIN | REGISTER
+		</nav>
+		<aside class="buscador">
+			<input id="Buscar" type="tex" placeholder="Buscar..">
+		</aside>
+	</section>
+	</header>
+	<nav class="menuP">
+		<div>
+		MENU PRINCIPAL
+		</div>
+	</nav>
+<section class="galeriaP">
+	<h2>GALERIA</h2> 
+</section>
+<section class="cuerpoN">
+	<article class="noti1">
+		NOTICIA 1
+	</article>
+	<article class="noti2">
+		NOTICIA 2
+	</article>
+</section>
+<aside class="sponsor">
+       <h1>SPONSOR</h1>
+            <section class="sponsor1">
+				Sponsor1
+			</section>
+			<section class="sponsor2">
+				Sponsor2
+			</section>
+			<section class="sponsor3">
+				Sponsor3
+			</section>
+			<section class="sponsor4">
+				Sponsor4
+			</section>
+			<section class="sponsor5">
+				Sponsor5
+			</section>
+</aside>
 </body>
-</html>	
+<footer class="pie">
+	<div>
+	Todos los derechos reservados
+	</div>
+</footer>
+</html>
